RESOLVED FIXED136891
[GTK] Fix runtime critical warnings when writing to the clipboard after r173687
https://bugs.webkit.org/show_bug.cgi?id=136891
Summary [GTK] Fix runtime critical warnings when writing to the clipboard after r173687
Carlos Garcia Campos
Reported 2014-09-17 09:01:10 PDT
TEST: bin/TestWebKitAPI/WebKit2Gtk/TestWebViewEditor... (pid=4979) /webkit2/WebKitWebView/cut-copy-paste/non-editable: (WebKitWebProcess:4985): GLib-GObject-CRITICAL **: g_closure_ref: assertion 'closure != NULL' failed OK /webkit2/WebKitWebView/cut-copy-paste/editable: (WebKitWebProcess:4985): GLib-GObject-CRITICAL **: g_closure_ref: assertion 'closure != NULL' failed OK /webkit2/WebKitWebView/select-all/non-editable: (WebKitWebProcess:4985): GLib-GObject-CRITICAL **: g_closure_ref: assertion 'closure != NULL' failed (WebKitWebProcess:4985): GLib-GObject-CRITICAL **: g_closure_ref: assertion 'closure != NULL' failed OK /webkit2/WebKitWebView/select-all/editable: (WebKitWebProcess:4985): GLib-GObject-CRITICAL **: g_closure_ref: assertion 'closure != NULL' failed (WebKitWebProcess:4985): GLib-GObject-CRITICAL **: g_closure_ref: assertion 'closure != NULL' failed OK PASS: bin/TestWebKitAPI/WebKit2Gtk/TestWebViewEditor
Attachments
Patch (1.94 KB, patch)
2014-09-17 09:03 PDT, Carlos Garcia Campos
pnormand: review+
Carlos Garcia Campos
Comment 1 2014-09-17 09:03:52 PDT
Philippe Normand
Comment 2 2014-09-17 09:07:49 PDT
Comment on attachment 238254 [details] Patch LGTM!
Carlos Garcia Campos
Comment 3 2014-09-17 09:13:07 PDT
Note You need to log in before you can comment on or make changes to this bug.