[GTK] Fix runtime critical warnings when writing to the clipboard after r173687 https://bugs.webkit.org/show_bug.cgi?id=136891

Reviewed by Philippe Normand.

* platform/gtk/PasteboardHelper.cpp:
(WebCore::PasteboardHelper::writeClipboardContents): Check passed
callback is not null before trying to ref/unref it since
g_closure_ref/unref are not null safe.

Canonical link: https://commits.webkit.org/154714@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173692 268f45cc-cd09-0410-ab3c-d52691b4dbfc